[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/lobby/Lobby.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/Level/Level.tscn" type="PackedScene" id=2]

[node name="lobby" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -472.0
margin_bottom = -260.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
name_field = NodePath("Panel/HBoxContainer/VBoxContainer/name")
address_field = NodePath("Panel/HBoxContainer/VBoxContainer/address")
player_list = NodePath("Panel/HBoxContainer/VBoxContainer2/players")

[node name="Panel" type="Panel" parent="."]
margin_left = 310.725
margin_top = 166.622
margin_right = 724.725
margin_bottom = 441.622
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_left = 5.0
margin_top = 4.0
margin_right = 409.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 200.0
margin_bottom = 264.0
rect_min_size = Vector2( 200, 0 )

[node name="Control" type="Control" parent="Panel/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )

[node name="name" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 50.0
text = "Karl"
placeholder_text = "Name"

[node name="address" type="LineEdit" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 78.0
text = "localhost:1080"
placeholder_text = "server"

[node name="connect" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 200.0
margin_bottom = 102.0
text = "Verbinden"

[node name="host" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 200.0
margin_bottom = 126.0
text = "Gastgeben"

[node name="ready" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 200.0
margin_bottom = 150.0
text = "Mach dich bereit!"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Lobby" type="Label" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 14.0
text = "Kapriolierer:"

[node name="players" type="ItemList" parent="Panel/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 200.0
margin_bottom = 264.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true

[node name="Panel2" type="Panel" parent="."]
margin_left = 206.842
margin_top = 60.2806
margin_right = 803.842
margin_bottom = 127.281
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2"]
margin_left = 24.5939
margin_top = 10.6849
margin_right = 134.594
margin_bottom = 32.6849
rect_scale = Vector2( 5, 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 1, 0.360784, 1 )
custom_constants/shadow_offset_x = 0
text = "Kapriolen Karl"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Spatial" parent="."]

[node name="Level" parent="background" instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="background"]
transform = Transform( 1, 0, 0, 0, 0.888313, 0.459239, 0, -0.459239, 0.888313, 0, 4.6964, 9.08107 )
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/ready" to="." method="_on_ready_pressed"]
